Support downloading files from AWS S3, with optional client-side encryption.